Fix overflow problem in smaller screen

--- a/src/styles/modules/_comments.scss
+++ b/src/styles/modules/_comments.scss
@@ -50,4 +50,8 @@
     font-size: 0.8em;
     font-weight: normal;
   }
+
+  @include e(text) {
+    overflow: hidden;
+  }
 }
